fixing uneven padding

--- a/contact-style.css
+++ b/contact-style.css
@@ -29,6 +29,6 @@ div {
 main {
     max-width: 600px;
     margin: 50px auto;
-    padding: 0 30px 50px 0;
+    padding: 0 50px 50px 0;
     position: relative;
 }
